--- a/notebooks/chap13.ipynb
+++ b/notebooks/chap13.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,14 +246,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "label = 'γ = ' + str(gamma)\n",
+    "label = 'gamma = ' + str(gamma)\n",
     "plot(infected_sweep, label=label)\n",
     "\n",
-    "decorate(xlabel='Contact rate (β)',\n",
+    "decorate(xlabel='Contact rate (beta)',\n",
     "         ylabel='Fraction infected')\n",
     "\n",
     "savefig('figs/chap13-fig01.pdf')"
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,19 +307,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(7, 4))\n",
+    "\n",
     "for gamma in gamma_array:\n",
     "    infected_sweep = sweep_beta(beta_array, gamma)\n",
-    "    label = 'γ = ' + str(gamma)\n",
+    "    label = 'gamma = ' + str(gamma)\n",
     "    plot(infected_sweep, label=label)\n",
     "    \n",
-    "decorate(xlabel='Contact rate (β)',\n",
+    "decorate(xlabel='Contact rate (beta)',\n",
     "         ylabel='Fraction infected',\n",
     "         loc='upper left')\n",
     "\n",
+    "plt.legend(bbox_to_anchor=(1.02, 1.02))\n",
+    "plt.tight_layout()\n",
     "savefig('figs/chap13-fig02.pdf')"
    ]
   },
@@ -328,15 +332,6 @@
    "metadata": {},
    "source": [
     "**Exercise:**  Suppose the infectious period for the Freshman Plague is known to be 2 days on average, and suppose during one particularly bad year, 40% of the class is infected at some point.  Estimate the time between contacts."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
    ]
   },
   {
@@ -358,6 +353,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -368,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,15 +417,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "for gamma in gamma_array:\n",
-    "    label = 'γ = ' + str(gamma)\n",
+    "    label = 'gamma = ' + str(gamma)\n",
     "    plot(frame[gamma], label=label)\n",
     "    \n",
-    "decorate(xlabel='Contact rate (β)',\n",
+    "decorate(xlabel='Contact rate (beta)',\n",
     "         ylabel='Fraction infected',\n",
     "         title='',\n",
     "         loc='upper left')"
@@ -436,17 +440,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(7, 4))\n",
+    "\n",
+    "\n",
     "for beta in [1.1, 0.9, 0.7, 0.5, 0.3]:\n",
-    "    label = 'β = ' + str(beta)\n",
+    "    label = 'beta = ' + str(beta)\n",
     "    plot(frame.row[beta], label=label)\n",
     "    \n",
-    "decorate(xlabel='Recovery rate (γ)',\n",
+    "decorate(xlabel='Recovery rate (gamma)',\n",
     "         ylabel='Fraction infected')\n",
     "\n",
+    "plt.legend(bbox_to_anchor=(1.02, 1.02))\n",
+    "plt.tight_layout()\n",
     "savefig('figs/chap13-fig03.pdf')"
    ]
   },
@@ -461,8 +470,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "contour(frame)\n",
