Improving drag_force

--- a/soln/chap22soln.ipynb
+++ b/soln/chap22soln.ipynb
@@ -1156,8 +1156,8 @@
     "    \"\"\"\n",
     "    rho, C_d, area = system.rho, system.C_d, system.area\n",
     "    \n",
-    "    mag = -rho * V.mag**2 * C_d * area / 2\n",
-    "    direction = V.hat()\n",
+    "    mag = rho * V.mag**2 * C_d * area / 2\n",
+    "    direction = -V.hat()\n",
     "    f_drag = direction * mag\n",
     "    return f_drag"
    ]
