--- a/soln/chap23soln.ipynb
+++ b/soln/chap23soln.ipynb
@@ -220,18 +220,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def drag_force(v, system):\n",
-    "    \"\"\"Computes drag force in the opposite direction of `v`.\n",
+    "def drag_force(V, system):\n",
+    "    \"\"\"Computes drag force in the opposite direction of `V`.\n",
     "    \n",
-    "    v: velocity Vector\n",
+    "    V: velocity Vector\n",
     "    system: System object with rho, C_d, area\n",
     "    \n",
     "    returns: Vector drag force\n",
     "    \"\"\"\n",
     "    rho, C_d, area = system.rho, system.C_d, system.area\n",
     "    \n",
-    "    mag = -rho * v.mag**2 * C_d * area / 2\n",
-    "    direction = v.hat()\n",
+    "    mag = rho * V.mag**2 * C_d * area / 2\n",
+    "    direction = -V.hat()\n",
     "    f_drag = direction * mag\n",
     "    return f_drag"
    ]
