--- a/soln/spiderman_soln.ipynb
+++ b/soln/spiderman_soln.ipynb
@@ -545,7 +545,7 @@
     "def drag_force(V⃗, system):\n",
     "    \"\"\"Compute drag force.\n",
     "    \n",
-    "    V: velocity Vector\n",
+    "    V⃗: velocity Vector\n",
     "    system: `System` object\n",
     "    \n",
     "    returns: force Vector\n",
