--- a/notebooks/chap22.ipynb
+++ b/notebooks/chap22.ipynb
@@ -537,8 +537,8 @@
     "    \"\"\"\n",
     "    rho, C_d, area = system.rho, system.C_d, system.area\n",
     "    \n",
-    "    mag = -rho * V.mag**2 * C_d * area / 2\n",
-    "    direction = V.hat()\n",
+    "    mag = rho * V.mag**2 * C_d * area / 2\n",
+    "    direction = -V.hat()\n",
     "    f_drag = direction * mag\n",
     "    return f_drag"
    ]
