Fix small typo.

--- a/book/book.tex
+++ b/book/book.tex
@@ -2198,7 +2198,7 @@ system.death_rate = 0.01
 system.birth_rate = 0.027
 \end{python}
 
-Then I ran the simulation and and plotted the results:
+Then I ran the simulation and plotted the results:
 
 \begin{python}
 results = run_simulation2(system)
