--- a/book/book.tex
+++ b/book/book.tex
@@ -437,7 +437,7 @@ conda install -c conda-forge pint
 And to install the ModSim library, run this command:
 
 \begin{code}
-pip install modsim
+pip install modsimpy
 \end{code}
 
 That should be everything you need.
