--- a/notebooks/chap25.ipynb
+++ b/notebooks/chap25.ipynb
@@ -663,7 +663,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looks good.\n",
+    "Looks good."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Animation\n",
+    "\n",
+    "\n",
+    "Here's a draw function we can use to animate the results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib.patches import Circle\n",
+    "from matplotlib.patches import Arrow\n",
+    "\n",
+    "def draw_func(state, t):\n",
+    "    theta, omega = state\n",
+    "    \n",
+    "    # draw a circle for the table\n",
+    "    radius_disk = magnitude(params.radius_disk)\n",
+    "    circle1 = Circle([0, 0], radius_disk)\n",
+    "    plt.gca().add_patch(circle1)\n",
+    "    \n",
+    "    # draw a circle for the teapot\n",
+    "    radius_pot = magnitude(params.radius_pot)\n",
+    "    center = pol2cart(theta, radius_pot)\n",
+    "    circle2 = Circle(center, 0.05, color='C1')\n",
+    "    plt.gca().add_patch(circle2)\n",
+    "\n",
+    "    # make the aspect ratio 1\n",
+    "    plt.axis('equal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state = results.first_row()\n",
+    "draw_func(state, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "animate(results, draw_func)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "### Exercises\n",
     "\n",
@@ -674,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,42 +773,6 @@
    "metadata": {},
    "source": [
     "And run `root_bisect` to find the desired force."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "force = res.root\n",
-    "results = run_two_phases(force, torque_friction, params)\n",
-    "theta_final = get_last_value(results.theta)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "remaining_angle = np.pi - 1.5"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Exercise:** Now suppose my friend pours 0.1 kg of tea and puts the teapot back on the turntable at distance 0.3 meters from the center.  If I ask for the tea back, how much force should they apply, over an arc of 0.5 radians, to make the teapot glide to a stop back in front of me?  You can assume that torque due to friction is proportional to the total mass of the teapot and the turntable."
    ]
   },
   {
@@ -764,7 +790,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution goes here"
+    "force = res.root\n",
+    "results = run_two_phases(force, torque_friction, params)\n",
+    "theta_final = get_last_value(results.theta)"
    ]
   },
   {
@@ -773,7 +801,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution goes here"
+    "remaining_angle = np.pi - 1.5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise:** Now suppose my friend pours 0.1 kg of tea and puts the teapot back on the turntable at distance 0.3 meters from the center.  If I ask for the tea back, how much force should they apply, over an arc of 0.5 radians, to make the teapot glide to a stop back in front of me?  You can assume that torque due to friction is proportional to the total mass of the teapot and the turntable."
    ]
   },
   {
@@ -851,6 +886,33 @@
   {
    "cell_type": "code",
    "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
