--- a/notebooks/spiderman.ipynb
+++ b/notebooks/spiderman.ipynb
@@ -676,6 +676,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Animation\n",
+    "\n",
+    "Here's a draw function we can use to animate the results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xs = results.P⃗.extract('x')\n",
+    "ys = results.P⃗.extract('y')\n",
+    "\n",
+    "def draw_func(state, t):\n",
+    "    set_xlim(xs)\n",
+    "    set_ylim(ys)\n",
+    "    x, y = state.P⃗\n",
+    "    plot(x, y, 'bo')\n",
+    "    decorate(xlabel='x position (m)',\n",
+    "             ylabel='y position (m)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "animate(results, draw_func)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Maximizing range\n",
     "\n",
     "To find the best value of `t_release`, we need a function that takes possible values, runs the simulation, and returns the range."
@@ -683,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
