--- a/notebooks/chap22.ipynb
+++ b/notebooks/chap22.ipynb
@@ -709,11 +709,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = results.R.extract('x')\n",
-    "y = results.R.extract('y')\n",
+    "xs = results.R.extract('x')\n",
+    "ys = results.R.extract('y')\n",
     "\n",
-    "x.plot()\n",
-    "y.plot()\n",
+    "xs.plot()\n",
+    "ys.plot()\n",
     "\n",
     "decorate(xlabel='Time (s)',\n",
     "         ylabel='Position (m)')\n",
@@ -762,15 +762,70 @@
    "outputs": [],
    "source": [
     "def plot_trajectory(results):\n",
-    "    x = results.R.extract('x')\n",
-    "    y = results.R.extract('y')\n",
-    "    plot(x, y, color='C2', label='trajectory')\n",
+    "    xs = results.R.extract('x')\n",
+    "    ys = results.R.extract('y')\n",
+    "    plot(xs, ys, color='C2', label='trajectory')\n",
     "\n",
     "    decorate(xlabel='x position (m)',\n",
     "             ylabel='y position (m)')\n",
     "\n",
     "plot_trajectory(results)\n",
     "savefig('figs/chap22-fig02.pdf')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Animation\n",
+    "\n",
+    "One of the best ways to visualize the results of a physical model is animation.  If there are problems with the model, animation can make them apparent.\n",
+    "\n",
+    "The ModSimPy library provides `animate`, which takes as parameters a `TimeSeries` and a draw function.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The draw function should take as parameters a `State` object and the time.  It should draw a single frame of the animation.\n",
+    "\n",
+    "Inside the draw function, you almost always have to call `set_xlim` and `set_ylim`.  Otherwise `matplotlib` auto-scales the axes, which is usually not what you want."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xs = results.R.extract('x')\n",
+    "ys = results.R.extract('y')\n",
+    "\n",
+    "def draw_func(state, t):\n",
+    "    set_xlim(xs)\n",
+    "    set_ylim(ys)\n",
+    "    x, y = state.R\n",
+    "    plot(x, y, 'bo')\n",
+    "    decorate(xlabel='x position (m)',\n",
+    "             ylabel='y position (m)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "animate(results, draw_func)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise:** Delete the lines that set the x and y axes (or [comment them out](https://en.wiktionary.org/wiki/comment_out)) and see what the animation does."
    ]
   },
   {
@@ -784,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,31 +984,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Hint\n",
     "\n",
     "system_no_drag = System(system, C_d=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
    ]
   },
   {
@@ -984,21 +1021,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Exercise:** The baseball stadium in Denver, Colorado is 1,580 meters above sea level, where the density of air is about 1.0 kg / meter$^3$.  How much farther would a ball hit with the same velocity and launch angle travel?"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hint\n",
-    "\n",
-    "system2 = System(system, rho=1.0*kg/m**3)"
+    "# Solution goes here"
    ]
   },
   {
@@ -1011,8 +1039,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise:** The baseball stadium in Denver, Colorado is 1,580 meters above sea level, where the density of air is about 1.0 kg / meter$^3$.  How much farther would a ball hit with the same velocity and launch angle travel?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Hint\n",
+    "\n",
+    "system2 = System(system, rho=1.0*kg/m**3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1033,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,29 +1109,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "C_d = drag_interp(43 * m / s)"
+    "# Solution goes here"
    ]
   },
   {
@@ -1094,7 +1131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution goes here"
+    "C_d = drag_interp(43 * m / s)"
    ]
   },
   {
@@ -1145,6 +1182,24 @@
   {
    "cell_type": "code",
    "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
