--- a/notebooks/chap24.ipynb
+++ b/notebooks/chap24.ipynb
@@ -408,7 +408,7 @@
     "    plot(results.r, color='C2', label='r')\n",
     "\n",
     "    decorate(xlabel='Time (s)',\n",
-    "             ylabel='Radius (mm)')\n",
+    "             ylabel='Radius (m)')\n",
     "    \n",
     "plot_r(results)"
    ]
@@ -428,7 +428,7 @@
    "source": [
     "plot(results.r, results.y, color='C3')\n",
     "\n",
-    "decorate(xlabel='Radius (mm)',\n",
+    "decorate(xlabel='Radius (m)',\n",
     "         ylabel='Length (m)',\n",
     "         legend=False)"
    ]
@@ -464,9 +464,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercises\n",
+    "### Animation\n",
     "\n",
-    "**Exercise:** Since we keep `omega` constant, the linear velocity of the paper increases with radius.  Use `gradient` to estimate the derivative of `results.y`.  What is the peak linear velocity?"
+    "Here's a draw function that animates the results using `matplotlib` patches."
    ]
   },
   {
@@ -475,12 +475,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solution goes here"
+    "from matplotlib.patches import Circle\n",
+    "from matplotlib.patches import Arrow\n",
+    "\n",
+    "def draw_func(state, t):\n",
+    "    # get radius in mm\n",
+    "    theta, y, r = state\n",
+    "    radius = r.magnitude * 1000\n",
+    "    \n",
+    "    # draw a circle with\n",
+    "    circle = Circle([0, 0], radius, fill=True)\n",
+    "    plt.gca().add_patch(circle)\n",
+    "    \n",
+    "    # draw an arrow to show rotation\n",
+    "    dx, dy = pol2cart(theta, radius)\n",
+    "    arrow = Arrow(0, 0, dx, dy)\n",
+    "    plt.gca().add_patch(arrow)\n",
+    "\n",
+    "    # make the aspect ratio 1\n",
+    "    plt.axis('equal')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "animate(results, draw_func)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise:** Run the simulation again with a smaller step size to smooth out the animation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercises\n",
+    "\n",
+    "**Exercise:** Since we keep `omega` constant, the linear velocity of the paper increases with radius.  Use `gradient` to estimate the derivative of `results.y`.  What is the peak linear velocity?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,24 +561,6 @@
     "Write a slope function that keeps the linear velocity, `dydt`, constant, and computes the angular velocity, `omega`, accordingly.\n",
     "\n",
     "Run the simulation and see how much faster we could finish rolling the paper."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
    ]
   },
   {
@@ -550,6 +584,24 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution goes here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
