--- a/notebooks/throwingaxe.ipynb
+++ b/notebooks/throwingaxe.ipynb
@@ -15,10 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Configure Jupyter so figures appear in the notebook\n",
@@ -60,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,9 +74,10 @@
     "    \"\"\"\n",
     "    P = Vector(0, 2) * m\n",
     "    V = Vector(8, 4) * m/s\n",
+    "    theta = 2 * radian\n",
+    "    omega = -7 * radian/s\n",
     "    \n",
-    "    init = State(x=P.x, y=P.y, theta=2, \n",
-    "                 vx=V.x, vy=V.y, omega=-7)\n",
+    "    init = State(P=P, V=V, theta=theta, omega=omega)\n",
     "\n",
     "    t_end = 1.0 * s\n",
     "    \n",
@@ -97,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,10 +121,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def slope_func(state, t, system):\n",
@@ -137,14 +134,12 @@
     "    \n",
     "    returns: sequence (vx, vy, ax, ay)\n",
     "    \"\"\"\n",
-    "    x, y, theta, vx, vy, omega = state\n",
-    "    unpack(system)\n",
+    "    P, V, theta, omega = state\n",
     "\n",
-    "    ax = 0\n",
-    "    ay = -g\n",
-    "    alpha = 0\n",
+    "    A = Vector(0, -system.g)\n",
+    "    alpha = 0 * radian / s**2\n",
     "\n",
-    "    return vx, vy, omega, ax, ay, alpha"
+    "    return V, A, omega, alpha"
    ]
   },
   {
@@ -156,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,17 +167,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results, details = run_ode_solver(system, slope_func, max_step=0.05)\n",
+    "results, details = run_ode_solver(system, slope_func)\n",
     "details"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,27 +200,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot(results.x, label='x')\n",
-    "plot(results.y, label='y')\n",
+    "def plot_position(P):\n",
+    "    x = P.extract('x')\n",
+    "    y = P.extract('y')\n",
+    "    plot(x, label='x')\n",
+    "    plot(y, label='y')\n",
     "\n",
-    "decorate(xlabel='Time (s)',\n",
-    "         ylabel='Position (m)')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot(results.theta, label='theta', color='C2')\n",
-    "\n",
-    "decorate(xlabel='Time (s)',\n",
-    "         ylabel='Angle (radian)')"
+    "    decorate(xlabel='Time (s)',\n",
+    "             ylabel='Position (m)')\n",
+    "    \n",
+    "plot_position(results.P)"
    ]
   },
   {
@@ -237,20 +225,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot(results.vx, label='vx')\n",
-    "plot(results.vy, label='vy')\n",
+    "def plot_velocity(V):\n",
+    "    vx = V.extract('x')\n",
+    "    vy = V.extract('y')\n",
+    "    plot(vx, label='vx')\n",
+    "    plot(vy, label='vy')\n",
     "\n",
-    "decorate(xlabel='Time (s)',\n",
-    "         ylabel='Velocity (m/s)')"
+    "    decorate(xlabel='Time (s)',\n",
+    "             ylabel='Velocity (m/s)')\n",
+    "    \n",
+    "plot_velocity(results.V)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot(results.theta, label='theta', color='C2')\n",
+    "\n",
+    "decorate(xlabel='Time (s)',\n",
+    "         ylabel='Angle (radian)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,67 +274,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot(results.x, results.y, label='trajectory', color='C3')\n",
-    "\n",
-    "decorate(xlabel='x position (m)',\n",
-    "         ylabel='y position (m)')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Exercises\n",
-    "\n",
-    "**Exercise:**  Find the starting conditions that make the final height of the COG as close as possible to 1.5 m.  Ideally, the final angle should be a little past vertical."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Exercise:**  Compute the total velocity of the leading edge of the axe at the point of impact, that is, the sum of velocity due to translation and rotation."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def make_frame(theta):\n",
-    "    rhat = Vector(pol2cart(theta, 1))\n",
-    "    that = rhat.perp()\n",
-    "    return rhat, that"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# quick, get those state variables into Vector objects!\n",
-    "state = get_last_value(results)\n",
-    "x, y, theta, vx, vy, omega = state\n",
-    "P = Vector(x, y)\n",
-    "V = Vector(vx, vy)\n",
-    "rhat, that = make_frame(theta)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Solution goes here"
+    "def plot_trajectory(P, **options):\n",
+    "    x = P.extract('x')\n",
+    "    y = P.extract('y')\n",
+    "    plot(x, y, **options)\n",
+    "    \n",
+    "    decorate(xlabel='x position (m)',\n",
+    "             ylabel='y position (m)')\n",
+    "    \n",
+    "plot_trajectory(results.P, label='trajectory')"
    ]
   },
   {
@@ -337,8 +294,6 @@
    "metadata": {},
    "source": [
     "## Animation\n",
-    "\n",
-    "NOTE: This section needs to be updated.\n",
     "\n",
     "Animating this system is a little more complicated, if we want to show the shape and orientation of the axe.\n",
     "\n",
@@ -360,32 +315,97 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "decorate(xlabel='x position (m)',\n",
-    "         ylabel='y position (m)',\n",
-    "         xlim=[0, 8.1],\n",
-    "         ylim=[0, 5.5],\n",
-    "         legend=False)\n",
+    "def make_frame(theta):\n",
+    "    rhat = Vector(pol2cart(theta, 1))\n",
+    "    that = rhat.perp()\n",
+    "    return rhat, that"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "P, V, theta, omega = results.first_row()\n",
+    "rhat, that = make_frame(theta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rhat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "that"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.dot(rhat, that)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "O = Vector(0, 0)\n",
+    "plot_segment(O, rhat)\n",
+    "plot_segment(O, that)\n",
+    "plt.axis('equal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xs = results.P.extract('x')\n",
+    "ys = results.P.extract('y')\n",
     "\n",
+    "l1 = 0.6 * m\n",
+    "l2 = 0.1 * m\n",
     "\n",
-    "\n",
-    "for t, state in system.results.iterrows():\n",
-    "    x, y, theta, vx, vy, omega = state\n",
-    "    P = Vector(x, y)\n",
+    "def draw_func(state, t):\n",
+    "    plt.axis('equal')\n",
+    "    set_xlim([0,8])\n",
+    "    set_ylim([0,6])\n",
+    "    \n",
+    "    P, V, theta, omega = state\n",
     "    rhat, that = make_frame(theta)\n",
     "    \n",
     "    # plot the handle\n",
     "    A = P - l1 * rhat\n",
     "    B = P + l2 * rhat\n",
-    "    plot_segment(A, B, color='red', update=True)\n",
+    "    plot_segment(A, B, color='red')\n",
     "\n",
     "    # plot the axe head\n",
     "    C = B + l2 * that\n",
     "    D = B - l2 * that\n",
-    "    plot_segment(C, D, color='black', linewidth=10, update=True)\n",
+    "    plot_segment(C, D, color='black', linewidth=10)\n",
     "\n",
     "    # plot the COG\n",
-    "    plot(x, y, 'bo', update=True)\n",
-    "    sleep(0.01)"
+    "    x, y = P\n",
+    "    plot(x, y, 'bo')\n",
+    "\n",
+    "    decorate(xlabel='x position (m)',\n",
+    "             ylabel='y position (m)')"
    ]
   },
   {
@@ -399,21 +419,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "state"
+    "state = results.first_row()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "draw_func(state, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "animate(results, draw_func)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercises\n",
+    "\n",
+    "**Exercise:**  Find the starting conditions that make the final height of the COG as close as possible to 1.5 m.  Ideally, the final angle should be a little past vertical."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -434,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
