--- a/soln/chap01soln.ipynb
+++ b/soln/chap01soln.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "* If you run a text cell, Jupyter typesets the text and displays the result.\n",
     "\n",
-    "* If you run a code cell, it runs the Python code in the cell and displays the result, if any.\n",
+    "* If you run a code cell, Jupyter runs the Python code in the cell and displays the result, if any.\n",
     "\n",
     "To try it out, edit this cell, change some of the text, and then press SHIFT-ENTER to run it."
    ]
@@ -86,6 +86,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Installing modules\n",
+    "\n",
+    "These notebooks use standard Python modules like NumPy and SciPy.  I assume you already have them installed in your environment.\n",
+    "\n",
+    "They also use two less common modules: Pint, which provides units, and modsim, which contains code I wrote specifically for this book.\n",
+    "\n",
+    "The following cells check whether you have these modules already and tries to install them if you don't."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    import pint\n",
+    "except ImportError:\n",
+    "    !pip install pint\n",
+    "    import pint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    from modsim import *\n",
+    "except ImportError:\n",
+    "    !pip install modsim\n",
+    "    from modsim import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Importing modsim\n",
     "\n",
     "The following cell imports `modsim`, which is a collection of functions we will use throughout the book.  Whenever you start the notebook, you will have to run the following cell.  It does three things:\n",
@@ -101,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +203,7 @@
        "<Unit('meter')>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +229,7 @@
        "<Unit('second')>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
