--- a/soln/chap01soln.ipynb
+++ b/soln/chap01soln.ipynb
@@ -125,43 +125,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Importing modsim\n",
+    "### Configuring Jupyter\n",
     "\n",
-    "The following cell imports `modsim`, which is a collection of functions we will use throughout the book.  Whenever you start the notebook, you will have to run the following cell.  It does three things:\n",
+    "The following cell:\n",
     "\n",
-    "1.  It uses a Jupyter \"magic command\" to specify whether figures should appear in the notebook, or pop up in a new window.\n",
+    "1.  Uses a Jupyter \"magic command\" to specify whether figures should appear in the notebook, or pop up in a new window.\n",
     "\n",
-    "2.  It configures Jupyter to display some values that would otherwise be invisible.  \n",
-    "\n",
-    "3.  It imports everything defined in `modsim`.\n",
+    "2.  Configures Jupyter to display some values that would otherwise be invisible.  \n",
     "\n",
     "Select the following cell and press SHIFT-ENTER to run it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "If this cell runs successfully, it produces no output other than this message.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Configure Jupyter so figures appear in the notebook\n",
     "%matplotlib inline\n",
     "\n",
     "# Configure Jupyter to display the assigned value after an assignment\n",
-    "%config InteractiveShell.ast_node_interactivity='last_expr_or_assign'\n",
-    "\n",
-    "# import functions from the modsim library\n",
-    "from modsim import *\n",
-    "\n",
-    "print('If this cell runs successfully, it produces no output other than this message.')"
+    "%config InteractiveShell.ast_node_interactivity='last_expr_or_assign'"
    ]
   },
   {
@@ -170,7 +155,43 @@
    "source": [
     "The first time you run this on a new installation of Python, it might produce a warning message in pink.  That's probably ok, but if you get a message that says `modsim.py depends on Python 3.7 features`, that means you have an older version of Python, and some features in `modsim.py` won't work correctly.\n",
     "\n",
-    "If you need a newer version of Python, I recommend installing Anaconda.  You'll find more information in the preface of the book."
+    "If you need a newer version of Python, I recommend installing Anaconda.  You'll find more information in the preface of the book.\n",
+    "\n",
+    "You can find out what version of Python and Jupyter you have by running the following cells."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python 3.7.3\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python --version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.4.0\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter --version"
    ]
   },
   {
