--- a/notebooks/chap02.ipynb
+++ b/notebooks/chap02.ipynb
@@ -765,7 +765,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The suffix of the filename indicates the format you want.  This example saves the current figure in a PDF file named `chap01-fig01.pdf`."
+    "The suffix of the filename indicates the format you want.  This example saves the current figure in a PDF file."
    ]
   },
   {
