--- a/book/book.tex
+++ b/book/book.tex
@@ -13,7 +13,7 @@
 \newcommand{\thetitle}{Modeling and Simulation in Python}
 \newcommand{\thesubtitle}{}
 \newcommand{\theauthors}{Allen B. Downey}
-\newcommand{\theversion}{3.4.1}
+\newcommand{\theversion}{3.4.2}
 
 
 %%%% Both LATEX and PLASTEX
@@ -445,7 +445,7 @@ That should be everything you need.
 
 \section{Copying my files}
 
-The simplest way to get the files for this book is to download a Zip archive from \url{http://modsimpy.com/zip}.  You will need a program like WinZip or gzip to unpack the Zip file.  Make a note of the location of the files you download.
+The simplest way to get the files for this book is to download a Zip archive from \url{http://modsimpy.com/zip}.  You will need a program like WinZip or gzip to unpack the Zip file.  Make a note of the location of the files you unpack.
 
 If you download the Zip file, you can skip the rest of this section, which explains how to use Git.
 
@@ -494,10 +494,16 @@ about it at \url{https://jupyter.org}.
 
 \index{Jupyter}
 
-To start Jupyter on macOS or Linux, open a Terminal; on Windows, open Git Bash.  Use \py{cd} to ``change directory" into the code directory in the repository:
+To start Jupyter on macOS or Linux, open a Terminal; on Windows, open Git Bash.  Use \py{cd} to ``change directory" into the directory in the repository that contains the notebooks.  If you downloaded the Zip file, it's probably:
 
 \begin{code}
-cd ModSimPy/code
+cd ModSimPy-master/notebooks
+\end{code}
+
+If you cloned it with Git, it's probably:
+
+\begin{code}
+cd ModSimPy/notebooks
 \end{code}
 
 Then launch the Jupyter notebook server:
@@ -506,7 +512,7 @@ Then launch the Jupyter notebook server:
 jupyter notebook
 \end{code}
 
-Jupyter should open a window in a browser, and you should see the list of notebooks in my repository.  Click on the first notebook, \py{chap01.ipynb} and follow the instructions to run the first few ``cells".  The first time you run a notebook, it might take several seconds to start, while some Python files get initialized.  After that, it should run faster.
+Jupyter should open a window in a browser, and you should see the list of notebooks in my repository.  Click on the first notebook, \py{chap01.ipynb} and follow the instructions to run the first few ``cells".  The first time you run a notebook, it might take several seconds to start while some Python files get initialized.  After that, it should run faster.
 
 Feel free to read through the notebook, but it might not make sense until you read Chapter~\ref{chap01}.
 
@@ -935,7 +941,7 @@ Print statements are useful for debugging functions.  For example, we can add a 
 
 \begin{python}
 def bike_to_wellesley():
-	print('Moving a bike to Wellesley')
+    print('Moving a bike to Wellesley')
     bikeshare.olin -= 1
     bikeshare.wellesley += 1
 \end{python}
@@ -1395,7 +1401,7 @@ def bike_to_olin(state):
     state.olin += 1
 \end{python}
 
-The first line checks whether the number of bikes at Wellesley is zero.  If so, it uses a a {\bf return statement}, which causes the function to end immediately, without running the rest of the statements.  So if there are no bikes at Wellesley, we ``return" from \py{bike_to_olin} without changing the state.
+The first line checks whether the number of bikes at Wellesley is zero.  If so, it uses a {\bf return statement}, which causes the function to end immediately, without running the rest of the statements.  So if there are no bikes at Wellesley, we ``return" from \py{bike_to_olin} without changing the state.
 
 \index{return statement}
 \index{statement!return}
