--- a/book/book.tex
+++ b/book/book.tex
@@ -13,7 +13,7 @@
 \newcommand{\thetitle}{Modeling and Simulation in Python}
 \newcommand{\thesubtitle}{}
 \newcommand{\theauthors}{Allen B. Downey}
-\newcommand{\theversion}{3.4.2}
+\newcommand{\theversion}{3.4.3}
 
 
 %%%% Both LATEX and PLASTEX
@@ -242,6 +242,9 @@ The \LaTeX\ source and code for this book is available from
 \begin{code}
 https://github.com/AllenDowney/ModSimPy
 \end{code}
+
+
+Cover design by Tim Sauder.
 
 %--table of contents------------------------------------------
 
@@ -541,6 +544,8 @@ Wood, Chris Lee, and Jason Woodard.
 
 \item Thanks to Alessandra Ferzoco, Erhardt Graeff, Emily Tow,
 Kelsey Houston-Edwards, Linda Vanasupa, Matt Neal, Joanne Pratt, and Steve Matsumoto for their helpful suggestions.
+
+\item Special thanks to Tim Sauder for the cover design.
 
 % ENDCONTRIB
 
@@ -6120,7 +6125,7 @@ Air resistance has a substantial effect on most projectiles in air, so we will i
 
 \index{air resistance}
 
-To model air resistance, we'll need the mass, frontal area, and drag coefficient of a baseball.  Mass and diameter are easy to find (see \url{http://modsimpy.com/baseball}).  Drag coefficient is only a little harder; according to {\it The Physics of Baseball}\footnote{Adair, {\it The Physics of Baseball}, Third Edition, Perennial, 2002}, the drag coefficient of a baseball is approximately 0.33 (with no units).
+To model air resistance, we'll need the mass, frontal area, and drag coefficient of a baseball.  Mass and diameter are easy to find (see \url{http://modsimpy.com/baseball}).  Drag coefficient is only a little harder; according to {\it The Physics of Baseball}\footnote{Adair, {\it The Physics of Baseball}, Third Edition, Perennial, 2002.}, the drag coefficient of a baseball is approximately 0.33 (with no units).
 
 \index{drag coefficient}
 
